# release-from-changelog

./: .editorconfig  .golangci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  go.mod  go.sum  main.go
.github/workflows/: release.yml
internal/changelogrelease/: action_input.go  action_input_test.go  changelog_parsing.go  changelog_parsing_test.go  changelog_release.go  changelog_release_test.go  github_release.go  utils_test.go
internal/changelogrelease/testdata/: CHANGELOG_1.md  CHANGELOG_2.md
src/: changelog_parsing.rs  github_release.rs  lib.rs  main.rs  utils.rs
tests/: action_input_test.rs  changelog_parsing_test.rs  integration_test.rs
