[package]
name = "release-from-changelog"
authors = ["hermannm"]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.99"
devlog-tracing = "0.1.1"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
regex = "1.11.1"

[dev-dependencies]
mockito = "1.7.0"
