[package]
name = "release-from-changelog"
authors = ["hermannm"]
publish = false # This project is binary-only, so we don't want to accidentally publish a library
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.99"
devlog-tracing = "0.1.1"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
regex = "1.11.1"

[dev-dependencies]
mockito = "1.7.0"
